Fix double jump issue when canvas has focus

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,6 +11,7 @@
     gap: 0;
     align-items: stretch;
     padding: 10px;
+    background: lavender;
 
     iframe {
       align-self: center !important;
